css/style.css
* {
	padding: 0;
	margin: 0;
}

*, *:before, *:after {
	box-sizing: border-box;
}

body, html {
	height: 100%;
}

h1 {
	position: absolute;
	top: 0;
	left: 0;
	color: #fff;
	text-shadow: 0 0 1rem #000;
  text-align: center;
}

main {
	display: flex;
	flex-direction: row;
  line-height: 1;
}

#preview {
	border: 4px solid red;
}

#mosaic {
	flex: auto;
}

#mosaic img {
  display: inline-block;
}

